2377: corrections to support listing on GitHub.  I wasn't able to finish off abbith and I'll pick that up again in the morning.